# bdk-labels

./: Cargo.toml  README.md
docs/: TODO.md  design-questions.md
src/: annotation.rs  cli.rs  convert.rs  db.rs  label.rs  lib.rs  main.rs  tag.rs
tests/: roundtrip.rs
tests/data/: wallet2.jsonl
