[package]
name = "bdk-labels"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bdk-label"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bip329 = "0.4.0"
bitcoin = { version = "0.32", default-features = false }
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
